<resources>
    <string name="app_name">KINDIT-카인딧</string>
    <string name="kakao_app_key">f3f24fa18ce3bf5244a9316dbd5bb5fe</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="lc_tv_info">Loading...</string>
    <string name="login_tv_info1">카인딧에 오신것을 환영합니다!</string>
    <string name="login_tv_info2">여러분만의 레시피를 마음껏 공유해주세요!</string>
    <string name="login_tv_sign_up">회원가입</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_social">소셜로 로그인</string>
    <string name="su_tv_sign_up">회원가입</string>
    <string name="su_tv_email">이메일</string>
    <string name="su_edt_email">이메일</string>
    <string name="su_tv_nickname">닉네임</string>
    <string name="su_edt_nickname">닉네임</string>
    <string name="su_btn_nickname_valid">중복 확인</string>
    <string name="su_tv_pass1">비밀번호</string>
    <string name="su_tv_pass2">비밀번호 확인</string>
    <string name="su_btn_req_sign">회원가입 요청</string>
    <string name="kl_tv_find_email">이메일 찾기</string>
    <string name="kl_tv_find_password">비밀번호 찾기</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fd_btn_send">메일 발송</string>
    <string name="fp_tv_info">입력하신 이메일로 임시비밀번호를 발송해 드렸습니다.\n로그인 후 비밀번호를 변경해 주세요.</string>
    <string name="fit_tv_info1">카인딧에 오신것을 환영합니다!</string>
    <string name="fit_tv_info2">저희는 당신의 취향이 알고 싶어요!\n관심있는 키워드를 선택해 주세요 :)</string>
    <string name="fit_btn_ok">완료</string>
    <string name="ct_tv_item">서브웨이</string>
    <string name="fs_edtl_serach">브랜드 혹은 메뉴명으로 검색보세요.</string>
    <string name="fsi_tv_rb">별점</string>
    <string name="my_btn_next">다음 단계로</string>
    <string name="my_tv_just_option">옵션 선택</string>
    <string name="my_tv_just_bread">빵 선택</string>
    <string name="my_tv_just_sauce">소스 선택</string>
    <string name="my_tv_just_price">최종가격</string>
    <string name="my_tv_overlap">아직 업로드 되지않은 레시피입니다 공유해주시겠어요? :)</string>
    <string name="my_tv_home">홈으로</string>
    <string name="my_tv_upload">업로드</string>
    <string name="fs_edt_search">브랜드 혹은 메뉴명으로 검색해보세요.</string>
    <string name="cd_tv_cost">가격</string>
    <string name="cd_tv_tip">업로드자 한마디</string>
    <string name="cd_tv_option">선택옵션</string>
    <string name="cd_tv_tag">해시태그</string>
    <string name="cd_tv_rating">레시피를 평가해주세요 :)</string>
    <string name="cw_tv_save">완료</string>
    <string name="cw_btn_load">이미지 업로드하기 +</string>
    <string name="cw_edt_text">글을 작성해주세요 :)</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="en_tv_rank">#랭킹순</string>
    <string name="en_tv_new">#최신순</string>
    <string name="en_tv_view">#조회순</string>

</resources>