<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.account.FindPasswordActivity">

    <ImageView
        android:id="@+id/fp_img_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/fp_img_back_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="256dp"
        app:layout_constraintStart_toEndOf="@+id/fp_img_back"
        app:layout_constraintTop_toTopOf="@+id/fp_img_back"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/kl_tv_find_password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fp_img_back_logo"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fp_edtl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/kinditMainColor1"
        android:ems="10"
        android:hint="@string/su_edt_email"
        android:textColorHint="@color/kinditMainColor1"
        app:helperTextTextColor="@color/kinditMainColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="TextFields">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fp_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/kinditMainColor1"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fp_btn_send"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/sendmail"
        android:text="@string/fd_btn_send"
        android:textColor="@color/kinditMainColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/fp_tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/fp_tv_info"
        android:textColor="@color/kinditMainColor1"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fp_btn_send" />
</androidx.constraintlayout.widget.ConstraintLayout>